--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/mpermperpisang/mper-wdio-mocha-app-demo#readme",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.15.0",
     "@wdio/appium-service": "^9.15.0",
     "@wdio/cli": "^9.15.0",
     "@wdio/local-runner": "^9.15.0",
