--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,12 @@
     "@wdio/local-runner": "^9.15.0",
     "@wdio/mocha-framework": "^9.15.0",
     "appium": "^2.19.0",
-    "chai": "^5.2.0"
+    "appium-uiautomator2-driver": "^4.2.3",
+    "appium-xcuitest-driver": "^9.7.0",
+    "chai": "^5.2.0",
+    "fs-extra": "^11.3.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
